language-server/src/tests/snapshots/gleam_language_server__tests__signature_help__help_for_aliased_qualified_call.snap
---
source: language-server/src/tests/signature_help.rs
expression: "\nimport example as wibble\npub fn main() {\n  wibble.example_fn()\n}\n"
---

import example as wibble
pub fn main() {
  wibble.example_fn()
                    ↑
}


----- Signature help -----
wibble.example_fn(Int, String) -> Nil
                  ▔▔▔

No documentation
