language-server/src/tests/snapshots/gleam_language_server__tests__signature_help__help_for_aliased_unqualified_call.snap
---
source: language-server/src/tests/signature_help.rs
expression: "\nimport example.{example_fn as wibble}\npub fn main() {\n  wibble()\n}\n"
---

import example.{example_fn as wibble}
pub fn main() {
  wibble()
         ↑
}


----- Signature help -----
wibble(Int, String) -> Nil
       ▔▔▔

No documentation
