language-server/src/tests/snapshots/gleam_language_server__tests__signature_help__help_for_calling_local_variable_referencing_constant_referencing_function.snap
---
source: language-server/src/tests/signature_help.rs
expression: "\npub fn wibble(a: Int, b: String) { 1.0 }\nconst wobble = wibble\n\npub fn main() {\n  let woo = wobble\n  woo()\n}\n"
---

pub fn wibble(a: Int, b: String) { 1.0 }
const wobble = wibble

pub fn main() {
  let woo = wobble
  woo()
      ↑
}


----- Signature help -----
woo(Int, String) -> Float
    ▔▔▔

Documentation:
MarkupContent(
    MarkupContent {
        kind: Markdown,
        value: "A locally defined variable.",
    },
)
