language-server/src/tests/snapshots/gleam_language_server__tests__signature_help__help_for_calling_local_variable_with_module_function.snap
---
source: language-server/src/tests/signature_help.rs
expression: "\npub fn wibble(a: Int, b: String) { 1.0 }\n\npub fn main() {\n  let wobble = fn(a: Int, b: String) { 1.0 }\n  wobble(1,)\n}\n"
---

pub fn wibble(a: Int, b: String) { 1.0 }

pub fn main() {
  let wobble = fn(a: Int, b: String) { 1.0 }
  wobble(1,)
           ↑
}


----- Signature help -----
wobble(Int, String) -> Float
            ▔▔▔▔▔▔

Documentation:
MarkupContent(
    MarkupContent {
        kind: Markdown,
        value: "A locally defined variable.",
    },
)
