language-server/src/tests/snapshots/gleam_language_server__tests__signature_help__help_for_piped_function_starts_from_second_argument.snap
---
source: language-server/src/tests/signature_help.rs
expression: "\npub fn wibble(a a: Int, b b: Int, c c: String) { 1.0 }\n\npub fn main() {\n    1 |> wibble()\n}\n    "
---

pub fn wibble(a a: Int, b b: Int, c c: String) { 1.0 }

pub fn main() {
    1 |> wibble()
                ↑
}
    


----- Signature help -----
wibble(a: Int, b: Int, c: String) -> Float
               ▔▔▔▔▔▔

No documentation
