language-server/src/tests/snapshots/gleam_language_server__tests__signature_help__help_for_piped_imported_function_starts_from_second_argument.snap
---
source: language-server/src/tests/signature_help.rs
expression: "\nimport example\npub fn main() {\n    1 |> example.example_fn()\n}\n    "
---

import example
pub fn main() {
    1 |> example.example_fn()
                            ↑
}
    


----- Signature help -----
example.example_fn(Int, String) -> Nil
                        ▔▔▔▔▔▔

No documentation
